--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
 @font-face {
-    font-family: 'MyCustomFont';
+    font-family: 'Mono-Black';
     src: url('/fonts/NaNHoloMono-Black/woff/NaNHoloMono-Black.woff2') format('woff2'),
          url('/fonts/NaNHoloMono-Black/ttf.NaNHoloMono-Black.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Mono-Medium';
+    src: url('/fonts/NaNHoloMono-Medium/woff/NaNHoloMono-Medium.woff2') format('woff2'),
+         url('/fonts/NaNHoloMono-Medium/ttf.NaNHoloMono-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
-    font-family: 'MyCustomFont', sans-serif;
+    font-family: 'Mono-Medium', sans-serif;
 }
